// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comphub - Salary Bar Trend Component should display minus sign when percentage change is negative 1`] = `
<pf-salary-trend-chart
  isHourly="false"
  salaryTrendData={[Function Object]}
>
  <div>
    <div
      class="d-flex flex-row"
    >
      <h2
        class="text-danger"
        ng-reflect-ng-class="text-danger"
      >
         - 
      </h2>
      <h1
        class="header-blue"
      >
        1.77%
      </h1>
      
      <div
        class="date-range ml-auto"
      >
         (03/2018 - 03/2019) 
      </div>
    </div>
    <kendo-chart>
      <kendo-chart-legend
        orientation="horizontal"
        position="bottom"
      />
      <kendo-chart-value-axis>
        <kendo-chart-value-axis-item />
      </kendo-chart-value-axis>
      <kendo-chart-category-axis>
        <kendo-chart-category-axis-item />
      </kendo-chart-category-axis>
      <kendo-chart-series>
        <kendo-chart-series-item
          categoryfield="EffectiveDate"
          type="area"
        />
      </kendo-chart-series>
      <kendo-chart-tooltip>
        
      </kendo-chart-tooltip>
    </kendo-chart>
  </div>
</pf-salary-trend-chart>
`;

exports[`Comphub - Salary Bar Trend Component should display plus sign when percentage change is positive 1`] = `
<pf-salary-trend-chart
  isHourly="false"
  salaryTrendData={[Function Object]}
>
  <div>
    <div
      class="d-flex flex-row"
    >
      <h2
        class="plus-sign"
        ng-reflect-ng-class="plus-sign"
      >
         + 
      </h2>
      <h1
        class="header-blue"
      >
        1.77%
      </h1>
      
      <div
        class="date-range ml-auto"
      >
         (03/2018 - 03/2019) 
      </div>
    </div>
    <kendo-chart>
      <kendo-chart-legend
        orientation="horizontal"
        position="bottom"
      />
      <kendo-chart-value-axis>
        <kendo-chart-value-axis-item />
      </kendo-chart-value-axis>
      <kendo-chart-category-axis>
        <kendo-chart-category-axis-item />
      </kendo-chart-category-axis>
      <kendo-chart-series>
        <kendo-chart-series-item
          categoryfield="EffectiveDate"
          type="area"
        />
      </kendo-chart-series>
      <kendo-chart-tooltip>
        
      </kendo-chart-tooltip>
    </kendo-chart>
  </div>
</pf-salary-trend-chart>
`;
